<resources>
    <string name="app_name">Devil Pantry</string>
    <string name="pantry">My Pantry</string>
    <string name="grocery">Grocery List</string>
    <string name="recipe">Find Recipe</string>
    <string name="todo">TO DO!</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity Available</string>
    <string name="add_item">Add Item</string>
    <string name="my_pantry">MY PANTRY</string>
    <string name="view_all">View All Items</string>
    <string name="process">Process</string>
    <string name="upc_code">upc_code</string>
    <string name="json_content">json_content</string>
    <string name="photo">photo</string>
    <string name="error_text">THERE WAS AN ERROR</string>
    <string name="try_again">Could not set up detector!  Try pressing button again.</string>

    <string-array name="pantry_headers">
        <item>Name</item>
        <item>Description</item>
        <item>Quantity Available</item>
    </string-array>
</resources>
