<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pantry_init"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/pantryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_pantry"
        android:textSize="45dp"
        android:layout_marginBottom="45dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pantryAdd"
        android:onClick="addClicked"
        android:text="@string/add_item"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_below="@id/pantryText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pantryViewAll"
        android:onClick="viewAllClicked"
        android:text="@string/view_all"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/pantryAdd"/>

    </RelativeLayout>

