<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/pantry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:onClick="pantryClick"
            android:text="@string/pantry" />

        <Button
            android:id="@+id/grocery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pantry_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:onClick="grocClick"
            android:text="@string/grocery" />

        <Button
            android:id="@+id/recipe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grocery_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:onClick="recipeClick"
            android:text="@string/recipe" />
    </RelativeLayout>

